--- a/fundamentos/formulario.html
+++ b/fundamentos/formulario.html
@@ -1,30 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <nav><a href="FranciscoLucenaCartaPresentacion.html">Inicio</a></nav>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="FranciscoLucenaCartaPresentacion.html">Página principal</a>
+        </li>
+        <li><a href="sakila.html">sakila</a></li>
+      </ul>
+    </nav>
     <main>
-        <section id="formulario">
-            <form action="">
-
-
-
-
-                
-            </form>
-
-
-
-        </section>
-
-
+      <h2>Customer</h2>
+      <form>
+        <div>
+          <label for="customer_id">customer_id</label>
+          <input
+            type="number"
+            id="customer_id"
+            name="customer_id"
+            placeholder="customer_id"
+            required
+          />
+        </div>
+        <div>
+          <label for="store_id">store_id</label>
+          <select id="store_id" name="store_id">
+            <option value="1">Store 1</option>
+            <option value="2">Store 2</option>
+            <option value="2">Store 3</option>
+          </select>
+        </div>
+        <div>
+          <label for="first_name">first_name</label>
+          <input
+            type="text"
+            id="first_name"
+            name="first_name"
+            required
+            minlength="3"
+            maxlength="30"
+          />
+        </div>
+        <div>
+          <label for="last_name">last_name</label>
+          <input
+            type="text"
+            id="last_name"
+            name="last_name"
+            minlength="3"
+            maxlength="50"
+            required
+          />
+        </div>
+        <div>
+          <label for="email">email</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Correo electrónico"
+            required
+          />
+        </div>
+        <div>
+          <label for="address_id_1">address_id</label>
+          <div>
+            <input
+              type="radio"
+              id="address_id"
+              name="address_id"
+              checked
+              value="1"
+            />
+            Home
+          </div>
+          <div>
+            <input type="radio" id="address_id_2" name="address_id" value="2" />
+            Work
+          </div>
+        </div>
+        <div>
+          <label for="active">Active</label>
+          <input
+            type="checkbox"
+            id="active"
+            name="active"
+            value="true"
+            checked
+          />
+        </div>
+        <div>
+          <label for="create_date">create_date</label>
+          <input type="date" id="create_date" name="create_date" />
+        </div>
+        <div>
+          <label for="last_update">last_update</label>
+          <input type="date" id="last_update" name="last_update" />
+        </div>
+        <div>
+          <input type="submit" value="enviar" />
+          <input type="button" value="volver" />
+        </div>
+      </form>
     </main>
 
+    <footer>
+        <p>
+          Author: Francisco <a href="prueba@gmail.com">Correo electrónico</a>
+        </p>
+    </footer>
 
-</body>
+  </body>
 </html>
