--- a/fundamentos/FranciscoLucenaCartaPresentacion.html
+++ b/fundamentos/FranciscoLucenaCartaPresentacion.html
@@ -44,7 +44,7 @@
 
     <footer>
         <p>
-          Author: Francisco <a href="prueba@gmail.com">Correo electrónico</a>
+          Autor: Francisco <a href="prueba@gmail.com">Correo electrónico</a>
         </p>
      </footer>
 
