--- a/fundamentos/formulario.html
+++ b/fundamentos/formulario.html
@@ -111,7 +111,7 @@
 
     <footer>
         <p>
-          Author: Francisco <a href="prueba@gmail.com">Correo electrónico</a>
+          Autor: Francisco <a href="prueba@gmail.com">Correo electrónico</a>
         </p>
     </footer>
 
