--- a/fundamentos/FranciscoLucenaCartaPresentacion.html
+++ b/fundamentos/FranciscoLucenaCartaPresentacion.html
@@ -6,7 +6,7 @@
     <title>Presentación</title>
   </head>
   <body>
-    <nav>
+    <nav class=".button">
       <li><a href="sakila.html">Sakila</a></li>
       <li><a href="formulario.html">Formulario</a></li>
     </nav>
