--- a/fundamentos/formulario.html
+++ b/fundamentos/formulario.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>
+    <nav class=".button">
       <ul>
         <li>
           <a href="FranciscoLucenaCartaPresentacion.html">Página principal</a>
