--- a/fundamentos/sakila.html
+++ b/fundamentos/sakila.html
@@ -6,7 +6,7 @@
     <title>Sakila</title>
   </head>
   <body>
-    <nav>
+    <nav class=".button">
       <li>
         <a href="FranciscoLucenaCartaPresentacion.html">Página principal</a>
       </li>
