--- a/fundamentos/formulario.html
+++ b/fundamentos/formulario.html
@@ -6,12 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class=".button">
-      <ul>
-        <li>
+    <nav class="button">
+      <ul class="button__ul">
+        <li class="button_li--1">
           <a href="FranciscoLucenaCartaPresentacion.html">Página principal</a>
         </li>
-        <li><a href="sakila.html">sakila</a></li>
+        <li class="button_li--2"><a href="sakila.html">sakila</a></li>
       </ul>
     </nav>
     <main>
