--- a/fundamentos/app/FranciscoLucenaCartaPresentacion.html
+++ b/fundamentos/app/FranciscoLucenaCartaPresentacion.html
@@ -20,6 +20,7 @@
             alt="Foto de Francisco"
           />
         </div>
+        </div>
       </header>
     
     <div class="div--nav">
@@ -27,7 +28,7 @@
         <li class="li--sakila">
           <a href="sakila.html">Sakila</a>
         </li>
-        <li class="li--formulario">
+        <li class=" ">
           <a href="formulario.html">Formulario</a>
         </li>
       </nav>
