--- a/fundamentos/app/calculadora.html
+++ b/fundamentos/app/calculadora.html
@@ -40,7 +40,7 @@
               <div class="tecla">
                 <input
                   type="button"
-                  value="X"
+                  value="x"
                   id="boton--multiplicar"
                   class="operador"
                 />
@@ -66,7 +66,7 @@
               <div class="tecla">
                 <input
                   type="button"
-                  value="&divide;"
+                  value="/"
                   id="boton--dividir"
                   class="operador"
                 />
